# source-code-memory-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.ai/: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  draft-release.yml  integration.yml  release.yml  security.yml
docs/: implementation-plan.md  initial-system-design.md
src/code_memory/: __init__.py  __main__.py  embeddings.py  server.py  storage.py  utils.py
tests/: __init__.py  test_embeddings.py  test_server.py  test_storage.py
